--- a/crypto_sentiment.ipynb
+++ b/crypto_sentiment.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,18 +538,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'source': {'id': None, 'name': 'CNET'}, 'author': 'Kourtnee Jackson', 'title': 'Central African Republic Passes Bill to Make Bitcoin Legal Tender - CNET', 'description': 'The nation is the second in line to make bitcoin a form of legal payment.', 'url': 'https://www.cnet.com/personal-finance/crypto/central-african-republic-passes-bill-to-make-bitcoin-legal-tender/', 'urlToImage': 'https://www.cnet.com/a/img/resize/254465c78aa125dceeb1d745c522cdd52ce7f7b1/2022/04/22/5e2b33a9-9ee6-400b-a99e-21bd935e2912/bitcoin-crypto-logo-2022-614.jpg?auto=webp&fit=crop&height=630&width=1200', 'publishedAt': '2022-04-27T15:44:58Z', 'content': \"The Central African Republic has adopted bitcoin as legal tender, making it the second nation in the world -- after El Salvador -- to do so. On Wednesday, President Faustin Archange Touadera's office… [+1078 chars]\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bitcoin_news_en[\"articles\"][15])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(bitcoin_news_en[\"articles\"])\n",
+    "# corpus = []\n",
+    "corpus = ' '.join([df['content'][i] for i in range(len(df))])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the lemmatizer\n",
-    "# YOUR CODE HERE!\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "# Create a list of stopwords\n",
-    "# YOUR CODE HERE!\n",
+    "sw = set(stopwords.words('english'))\n",
     "\n",
     "# Expand the default stopwords list if necessary\n",
-    "# YOUR CODE HERE!"
+    "sw_addon = {'youve'}"
    ]
   },
   {
@@ -559,23 +587,21 @@
    "outputs": [],
    "source": [
     "# Complete the tokenizer function\n",
+    "\n",
     "def tokenizer(text):\n",
     "    \"\"\"Tokenizes text.\"\"\"\n",
     "    \n",
     "    # Remove the punctuation from text\n",
-    "\n",
-    "   \n",
+    "    regex = re.compile(\"[^a-zA-Z ]\")\n",
+    "    re_clean = regex.sub('', text)\n",
     "    # Create a tokenized list of the words\n",
-    "    \n",
+    "    words = word_tokenize(re_clean)\n",
     "    \n",
     "    # Lemmatize words into root words\n",
-    "\n",
+    "    lem = [lemmatizer.lemmatize(word) for word in words]\n",
     "   \n",
-    "    # Convert the words to lowercase\n",
-    "    \n",
-    "    \n",
-    "    # Remove the stop words\n",
-    "    \n",
+    "    # Convert the words to lowercase & Remove the stop words\n",
+    "    tokens = [word.lower() for word in lem if word.lower() not in sw.union(sw_addon)]\n",
     "    \n",
     "    return tokens"
    ]
